# smart-home-solar

./: .gitignore  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  docker-compose.yml  ha-dashboard.legacy-ids.yaml  ha-dashboard.yaml  smart_home-autodeploy.service  smart_home-autodeploy.timer  smart_home-controller.service  smart_home-publisher.service  smart_home-refresh.service  smart_home-refresh.timer  smart_home.env.example
deploy/mosquitto/: mosquitto.conf
docs/: curtailment-redesign.md
scripts/: backtest_price_library.py  bootstrap_pi.sh  ha_history_export.py  pi_autodeploy.sh  probe_register_persistence.py  run_persistence_probe.sh  scan_prices.py  simulate_curtailment.py  simulate_from_history.py
src/smart_home/: __init__.py  control.py  controller.py  economics.py  inverter.py  modbus_tcp.py  mqtt.py  p1.py  prices.py  schedule.py  status.py
tests/: test_control.py  test_controller.py  test_curtail_window.py  test_economics.py  test_inverter.py  test_modbus_tcp.py  test_mqtt.py  test_p1.py  test_prices.py  test_schedule.py  test_status.py  test_window_controller.py
