[project]
name = "smart-home"
version = "0.1.0"
description = "Dynamic PV curtailment for a Huawei SUN2000 inverter on a Frank Energie day-ahead contract"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
hw = ["huawei-solar>=3.0.6"]   # inverter access over built-in WLAN (Modbus 6607)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
